--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>247Calendar</title>
   </head>
   <body id="root" class="flex flex-col h-screen">
     <script type="module" src="/src/main.jsx"></script>
